Fix bug where h1 would jump down a pixel when the revision spinner was shown

--- a/src/web/assets/cp/src/css/_cp.scss
+++ b/src/web/assets/cp/src/css/_cp.scss
@@ -646,7 +646,7 @@ $systemInfoHoverBgColor: darken($grey800, 10%);
   }
 
   h1 {
-    line-height: 32px;
+    line-height: 34px;
     margin-top: 0;
     margin-bottom: 0;
     min-width: 0;
